--- a/Engineer_C8t6/Engineer_C8t6.ioc
+++ b/Engineer_C8t6/Engineer_C8t6.ioc
@@ -25,7 +25,7 @@ Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE
-FREERTOS.Tasks01=Start_Task,24,64,Start_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Msg_Send_Task,24,128,Msg_Send_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Detect_Task,24,128,Detect_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Info_Get_Task,24,128,Info_Get_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Clamp_Task,24,128,Clamp_Task_Fun,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Clamp_Task,24,128,Clamp_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Info_Send_Task,24,128,Msg_Send_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Detect_Task,24,128,Detect_Task_Fun,Default,NULL,Dynamic,NULL,NULL;Info_Get_Task,24,128,Info_Get_Task_Fun,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=64
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -167,3 +167,4 @@ VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim4.Mode=TIM4
 VP_SYS_VS_tim4.Signal=SYS_VS_tim4
 board=custom
+rtos.0.ip=FREERTOS
